# python-require-package

./: README.md  pyproject.toml  setup.py
require/: README.md  __init__.py
src/require_package/: main.py
