[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "require-package"
version = "0.0.1"
authors = [
  { name="Leva Ginzburg", email="smj510black@gmail.com" },
]
description = "Provides one-time installation of Python package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mariownyou/python-require-package"
"Bug Tracker" = "https://github.com/mariownyou/python-require-package/issues"
